<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Portfolio_layout_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PortfolioActivity">

    <TextView
        android:id="@+id/portfolio_title"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/portfolio_title_text_view" />

    <Button
        android:id="@+id/first_project_button"
        style="@style/PortfolioButton"
        android:layout_below="@id/portfolio_title"
        android:layout_centerHorizontal="true"
        android:onClick="launchFirstProject"
        android:text="@string/first_project_button" />

    <Button
        android:id="@+id/second_project_button"
        style="@style/PortfolioButton"
        android:layout_below="@id/first_project_button"
        android:layout_centerHorizontal="true"
        android:onClick="launchSecondProject"
        android:text="@string/second_project_button" />

    <Button
        android:id="@+id/third_project_button"
        style="@style/PortfolioButton"
        android:layout_below="@id/second_project_button"
        android:layout_centerHorizontal="true"
        android:onClick="launchThirdProject"
        android:text="@string/third_project_button" />

    <Button
        android:id="@+id/fourth_project_button"
        style="@style/PortfolioButton"
        android:layout_below="@id/third_project_button"
        android:layout_centerHorizontal="true"
        android:onClick="launchFourthProject"
        android:text="@string/fourth_project_button" />

    <Button
        android:id="@+id/final_project_button"
        style="@style/CapstoneButton"
        android:layout_below="@id/fourth_project_button"
        android:layout_centerHorizontal="true"
        android:onClick="launchFinalProject"
        android:text="@string/final_project_button" />

</RelativeLayout>
